--- a/WhoWeAre.css
+++ b/WhoWeAre.css
@@ -211,17 +211,17 @@
   z-index:1;
   }
   .what {
-    margin-left:35%;
+    margin-left:45%;
      font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
      font-size: 1.3rem;
      font-weight: bold;
   top: -100px;
-  margin-top: 32%;
+  margin-top: -50px;
    
      /* width: 150%; */
   }
   .Whos{
-    margin-top: 32%;
+    margin-top:-50px;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 1.3rem;
     font-weight: bold;
@@ -231,17 +231,17 @@
     font-size: 21px;
     font-weight: bold;
      
-    margin-top: 32%;
+    margin-top:-50px;
   }
   .Insights{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
      font-size: 21px;
      font-weight: bold;
      margin-left: -21px;
-     margin-top: 32%;
+     margin-top:-50px;
   }
   .getin{
-   margin-top: 32%;
+   margin-top:-50px;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 21px;
    font-weight: bold;
@@ -257,11 +257,11 @@
   .enimg{
    
     text-align: center;
-    margin-left: 30vw;
-    margin-top: 10vh;
+    margin-left: -58vw;
+    margin-top: -2vh;
   }
   .gg{
-    margin-left: 5vw;
+    margin-left: -15vw;
     margin-top: 22px;
     margin-bottom: -32px;
   width: 0%;
@@ -373,9 +373,9 @@
   .numbertext {
     color: #221f1f;
     font-size: 22px;
-    margin-left: 420px;
+    margin-left: 460px;
     position: absolute;
-    margin-top: -110px;
+    margin-top: -49px;
   }
 
   .container2{
@@ -403,7 +403,7 @@
     position: absolute;
     top: 50%;
     width: auto;
-    margin-top: -52px;
+    margin-top: -116px;
     padding: 16px;
     color: white;
     font-weight: bold;
@@ -423,16 +423,27 @@
   .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
   }
-                                                             /* first slide image and text */
+                                                             /* first slide image and text */                                                           
+                                                             
+  .hpos2{
+    margin-top:-700px;
+    margin-left:280px;
+    color:white;
+    font-size:30px;
+  }
+                                                             
+                                                             
+                                                             
   .text {
-    color:black;
+    color:white;
     font-size: 28px;
   font-family: sans-serif;
     position: absolute;
-   margin-top: -480px;
-   margin-left: 220px;
+   margin-top: 25px;
+   margin-left: 280px;
     width: 50%;
     text-align: justify;
+    line-height:40px;
    
   
   }
@@ -440,7 +451,7 @@
     color: rgb(116, 110, 110);
     /* margin-left: 600px; */
     /* margin-top: -1066px; */
-    font-size: 2vw;
+    /* font-size: 2vw; */
     font-family: sans-serif;
   }
   
@@ -462,13 +473,14 @@
   
   
   .meimge1{
-    margin-top: 120px;
-    margin-left: 1310px;
+    margin-top: 60px;
+    margin-left: 1130px;
     z-index: -1;
     display: flex;
+    /* width:1000px; */
    
   }
-  .rd {
+  /* .rd {
   width:10%;
   height:30px;
   margin-top: 300px;
@@ -478,15 +490,23 @@
   text-align: center;
   border:2px solid;
   border-color: rgba(0, 255, 0, 0.5);  
-  }
+  } */
                                                         /* second slide image and text */
+
+        .globelogo{
+        margin-left: 680px;
+
+        margin-top: -700.5px;
+        font-size: 150px;
+       }
+  
   .text1 {
     color:black;
     font-size: 28px;
   font-family: sans-serif;
     position: absolute;
-   margin-top: -480px;
-   margin-left: 240px;
+   margin-top: 60px;
+   margin-left: 280px;
     width: 50%;
     text-align: justify;
    
@@ -518,13 +538,13 @@
   
   
   .meimge2{
-    margin-top: 120px;
-    margin-left: 1300px;
+    margin-top: 60px;
+    margin-left: 1130px;
     z-index: -1;
     display: flex;
    
   }
-  .rd {
+  /* .rd {
   width:10%;
   height:30px;
   margin-top: 300px;
@@ -534,7 +554,7 @@
   text-align: center;
   border:2px solid;
   border-color: rgba(0, 255, 0, 0.5);  
-  }
+  } */
   
   
   
@@ -686,19 +706,19 @@
     to {opacity: 1}
   }
   .img1{
-    margin-top: 30px;
+    margin-top: -41px;
     margin-left:-20vh
   }
   .img2{
-    margin-top: 30px;
+    margin-top: -41px;
     margin-left:-20vh
   }
   .img3{
-    margin-top: 30px;
+    margin-top: -41px;
     margin-left:-20vh
   }
   .img4{
-    margin-top: 30px;
+    margin-top: -41px;
     margin-left:-20vh
   }
   
