--- a/What We Do.css
+++ b/What We Do.css
@@ -13,36 +13,36 @@
 .cc{
     text-decoration: none;
  color: black;
-    margin: 1.6vh;
-    margin-left: 2.2vw;
+    margin-top: 1vh;
+    margin-left: 1.2vw;
     font-size: 25px;
 }
 .ne{
 text-decoration: none;
-margin-left:11vw;
-margin-top: -5.7vh;
+margin-left:9.4vw;
+margin-top: -2.2vh;
 font-size: 25px;
 }
 .In{
 text-decoration: none;
-margin-left: 25vw;
-margin-top: -3.9vh;
+margin-left: 21.95vw;
+margin-top: -2.25vh;
 font-size: 25px;
 }
 .world{
-    margin-left: 1325px;
-    margin-top: -38px;
+    margin-left: 1655px;
+    margin-top: -37px;
     font-size: 30px;
 }
 .globelogo{
-    margin-left: 1290px;
+    margin-left: 1619px;
     top: 0;
-    margin-top: -29.5px;
+    margin-top: -31px;
     font-size: 32px;
 }
 .searchlogo{
-    margin-left: 1470px;
-    margin-top: -30px;
+    margin-left: 1799px;
+    margin-top: -31.4px;
     font-size: 27px;
 }
 .menu-bar{
@@ -73,7 +73,7 @@ font-size: 25px;
   .menu-bar ul li a
   {
   text-decoration: none;
-  color:#4A148C;
+  color:black;
   }
   .active, .menu-bar ul li
   {
@@ -241,7 +241,7 @@ z-index:1;
 .enimg{
    
     text-align: center;
-    margin-left: -80vw;
+    margin-left: -81.4vw;
     margin-top: 20px;
 }
 .gg{
